<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
<string name="hello">Hello World, DevicePolicyDemoActivity!</string>
    <!-- <string name="app_name">DevicePolicyDemo</string> -->
    <string name="enable_device_admin">Enable Device Admin</string>
    <string name="lock_device">Lock Device</string>
    <string name="reset_device">Reset Device</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    
    
    
    <string name="app_name">ProyectoSoftwareAndroid</string>
    <string name="activity_sample_device_admin"></string>
    <string name="sample_device_admin"></string>
    <string name="sample_device_admin_description"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    

   
    

</resources>
